# selection_bot_inform

./: README.md  bot.py  pyproject.toml  requirements.txt
