[tool.poetry]
name = "nabor-bot-inform"
version = "0.1.0"
description = ""
authors = ["kill-your-soul <Platonovdi@gmail.com>"]
readme = "README.md"
packages = [{include = "nabor_bot_inform"}]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "0.8.0"
aiohttp = "3.8.1"
aiosignal = "1.2.0"
anyio = "3.5.0"
async-timeout = "4.0.2"
attrs = "21.4.0"
charset-normalizer = "2.0.12"
choicelib = "0.1.5"
frozenlist = "1.3.0"
idna = "3.3"
multidict = "6.0.2"
pydantic = "1.9.0"
sniffio = "1.2.0"
typing-extensions = "4.2.0"
vbml = "1.1.post1"
vkbottle = "4.2.2"
vkbottle-types = "5.131.146.1"
watchgod = "0.8.2"
yarl = "1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
